[package]
name        = "ordered-f32"
version     = "0.1.12"
authors     = [
  "Hsinhai Ataica",
  "Jonathan Reem <jonathan.reem@gmail.com>",
  "Matt Brubeck <mbrubeck@limpet.net>",
]
license     = "MIT"
description = "Wrappers for total ordering on f32 based off of https://github.com/reem/rust-ordered-float"
repository  = "https://github.com/DrAlta/rust-ordered-f32"
readme      = "README.md"
edition     = "2021"
rust-version = "1.60"

[dependencies]
num-traits = "0.2.19"

[features]
